--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "new-one",
-  "version": "0.1.0",
-  "private": true,
+  "name": "bedding-stock-line-bot",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SSPPIH/new-one.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SSPPIH/new-one/issues"
+  },
+  "homepage": "https://github.com/SSPPIH/new-one#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "next": "13.0.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "express": "^4.18.2"
   }
 }
